# CAAA

./: .gitignore  :wa  CMakeLists.txt  LICENSE  LISENCE  README.md  brew.rb  caaa.rb  makefile  notes.org
.cache/clangd/index/: bsafe.c.F0C139C95FBF6119.idx  bsafe.h.99AAAC973A73D6A1.idx  bstest.c.3F847976D9385D9E.idx  bstraux.c.976C57F4CA9E88FD.idx  bstraux.h.B494A270836F3CE1.idx  bstrlib.c.8E409F896CEE5BF9.idx  bstrlib.h.2CCE3AD540BC7CD5.idx  buniutil.c.EA20823A9042760B.idx  buniutil.h.1ABA2114A21A66B0.idx  munit.c.7E4BA8221A927FB2.idx  munit.h.FD24AC45F6C2C3BB.idx  request.c.7F3E1D2A098C4C1C.idx  request.c.CAF29AD596C06E34.idx  request.h.4E7F3677614C2D66.idx  request.h.D854800634CB9412.idx  request_tests.c.A0412CF05B1DFAAB.idx  status_codes.c.1D9A154C0A766A56.idx  testaux.c.EE1652220927C674.idx  utf8util.c.AE632C28FE437AA6.idx  utf8util.h.5EB88ECECC015940.idx  webserver.c.8748C65A7500E331.idx  webserver.h.B725B2995374D85E.idx  webserver_test.c.152D792935F4D1E9.idx
.ccls-cache/@@mnt@f@git@C@CAAA/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@10@bits@std_abs.h.blob  @usr@include@c++@10@cstdlib.blob  @usr@include@c++@10@stdlib.h.blob  @usr@include@ctype.h.blob  @usr@include@endian.h.blob  @usr@include@errno.h.blob  @usr@include@features.h.blob  @usr@include@inttypes.h.blob  @usr@include@limits.h.blob  @usr@include@linux@errno.h.blob  @usr@include@linux@limits.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@x86_64-linux-gnu@asm@errno.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@errno.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@local_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@posix1_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@posix2_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes-arch.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes.h.blob  @usr@include@x86_64-linux-gnu@bits@select.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-intn.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-uintn.h.blob  @usr@include@x86_64-linux-gnu@bits@stdio_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@stdlib-float.h.blob  (+53 more)
.ccls-cache/@mnt@f@git@C@CAAA/: argparse@src@argparse.c  argparse@src@argparse.c.blob  argparse@src@argparse.h  argparse@src@argparse.h.blob  argparse@src@bstrlib.h  argparse@src@bstrlib.h.blob  argparse@src@colors.h.blob  argparse@src@dbg.h.blob  argparse@tests@argparse_tests.c  argparse@tests@argparse_tests.c.blob  argparse@tests@munit.h.blob  bintree@src@bintree.c.blob  bintree@src@bintree.h  bintree@src@bintree.h.blob  bintree@src@bstrlib.h.blob  bintree@src@dbg.h.blob  bintree@tests@bintree_tests.c  bintree@tests@bintree_tests.c.blob  bintree@tests@munit.h.blob  map@src@bstrlib.h.blob  map@src@map.c.blob  map@src@map.h.blob  tritree@src@bstrlib.h.blob  tritree@src@dbg.h.blob  tritree@src@tritree.c  tritree@src@tritree.c.blob  tritree@src@tritree.h  tritree@src@tritree.h.blob  tritree@tests@munit.h.blob  tritree@tests@tritree_tests.c  tritree@tests@tritree_tests.c.blob  vector@src@vector.c  vector@src@vector.c.blob  vector@src@vector.h  vector@src@vector.h.blob  vector@tests@munit.h.blob  vector@tests@vector_tests.c  vector@tests@vector_tests.c.blob
.github/workflows/: main.yaml
URLRouter/src/: urlrouter.h
argparse/: compile_commands.json
argparse/src/: argparse.c  argparse.h  bstrlib.h
argparse/tests/: argparse_tests.c
bintree/: Makefile
bintree/src/: bintree.c  bintree.h  ca_bintree.c  ca_bintree.h
bintree/tests/: bintree_tests.c
crypto/base64/: README.md  base64.c
crypto/tests/: crypto_tests.c
crypto/xor/: xor.c  xor.h
dbg/: ca_dbg.h  ca_logging.h  colors.h  dbg.h  dbg_a.h
genssl/src/: genssl.c  genssl.h
genssl/test/: genssl_tests.c
io/: Makefile
io/src/: ca_fileio.c  ca_fileio.h  ca_fileio_ssl.c  ca_fileio_ssl.h  ca_serial.h  fileio.c  fileio.h
io/tests/: fileio_test.c
lin/bintree/: compile_commands.json
lin/io/src/: fileio.h
lin/map/: makefile
lin/project/: Makefile  vector_tests.c
lin/queue/: makefile
lin/ringbuffer/: makefile
lin/stack/: makefile
lin/tritree/: Makefile
lin/vector/: makefile
list/src/: list.c  list.h  list_algorithm.h
list/tests/: list_tests.c
map/: compile_commands.json
map/src/: ca_map.c  ca_map.h  map.c  map.h
map/tests/: map_tests  map_tests.c
queue/: compile_commands.json
queue/src/: ca_queue.c  ca_queue.h  colors.h  queue.h
queue/tests/: queue_test  queue_tests.c
ringbuffer/src/: ca_ringbuffer.c  ca_ringbuffer.h  ringbuffer.c  ringbuffer.h
ringbuffer/tests/: reingbuffer_tests.c  ringbuffer_test
sockets/: makefile
sockets/src/: soc.c  soc.h  ssl.c  ssl.h
sockets/tests/: socket_tests.c  ssl.conf  ssl_tests.c
stack/: compile_commands.json
stack/src/: ca_stack.c  ca_stack.h  stack.c  stack.h
stack/tests/: stack_test  stack_tests.c
strings/: bstrlib.h
tritree/src/: NUL  ca_tritree.c  ca_tritree.h  tritree.h
tritree/tests/: tritree_tests.c
vector/: compile_commands.json
vector/src/: ca_vector.c  ca_vector.h  dbg.h  vector.c  vector.h  vector_apply.h
vector/tests/: vector_tests.c
webserver/src/: request.c  request.h  status_codes.c  urlrouter.h  webserver.c  webserver.h
webserver/tests/: request.req  request_tests.c  webserver_test.c
win/: makefile
win/bintree/: Makefile
win/io/: Makefile
win/map/: makefile
win/project/: Makefile
win/queue/: makefile
win/ringbuffer/: compile_commands.json  makefile
win/stack/: makefile
win/tritree/: Makefile  compile_commands.json
win/vector/: makefile
(+787 files in other folders)
